Remove memory params that don't apply anymore in java 8